# GoGrpcApiGateway

./: .gitignore  README.md  WORKSPACE.bazel  go.mod  go.sum
project/client/: client.go
project/proto/v1/: BUILD.bazel  dummy-nogazelle.go  dummy.pb.go  dummy.pb.gw.go  dummy.proto
project/server/: server.go
project/service/: BUILD.bazel  dummy-nogazelle.go  service.go
