load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "service.go",
    ],
    deps = ["//project/proto/v1:v1",
    "@org_golang_google_protobuf//types/known/emptypb"   
    ],
    importpath = "github.com/jcorrea-videoamp/GoGrpcApiGateway/project/service",
    visibility = ["//visibility:public"],
)