load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-openapiv2:defs.bzl", "protoc_gen_openapiv2")

proto_library(
    name = "project_proto",
    srcs = [
        "dummy.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-openapiv2/options:options_proto",
        "@go_googleapis//google/api:annotations_proto"
    ],
)

go_proto_library(
    name = "project_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-grpc-gateway:go_gen_grpc_gateway"
    ],
    importpath = "github.com/jcorrea-videoamp/GoGrpcApiGateway/project/proto/v1",
    proto = ":project_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-openapiv2/options:options_go_proto",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "v1",
    embed = [":project_go_proto"],
    importpath = "github.com/jcorrea-videoamp/GoGrpcApiGateway/project/proto/v1",
    visibility = ["//visibility:public"],
)

protoc_gen_openapiv2(    
    name = "proto",
    proto = ":project_proto",
    single_output = True,
)
